--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.background{
+    background-image: url('./assets/images/brackGroundCorregida.jpg');
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
