--- a/src/app/bezinger-test/bezinger-test.component.css
+++ b/src/app/bezinger-test/bezinger-test.component.css
@@ -105,6 +105,7 @@ p{
     transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     margin-top: 1em;
     margin-top: 0.75em;
+    text-align: center;
   }
 
   .contMod1ParteB{
